// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup [common] example testing should match snapshot(s) for DefaultProps 1`] = `
<span
  class="lucid-RadioGroup"
>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Superman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Batman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Wonder Woman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Aquaman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Robin
    </div>
  </label>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for IsDisabled 1`] = `
<span
  class="lucid-RadioGroup"
>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled lucid-RadioButtonLabeled-is-selected"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        disabled=""
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Superman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled"
    >
      <input
        class="lucid-RadioButton-native"
        disabled=""
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Batman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled"
    >
      <input
        class="lucid-RadioButton-native"
        disabled=""
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Wonder Woman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled"
    >
      <input
        class="lucid-RadioButton-native"
        disabled=""
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Aquaman
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-disabled"
    >
      <input
        class="lucid-RadioButton-native"
        disabled=""
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Robin
    </div>
  </label>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for NestedSelect 1`] = `
<span
  class="lucid-RadioGroup"
>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
    style="margin-right:15px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Alvin
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:15px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Simon
      <label
        class="lucid-RadioButtonLabeled"
      >
        <span
          class="lucid-RadioButton"
        >
          <input
            class="lucid-RadioButton-native"
            type="radio"
          />
          <span
            class="lucid-RadioButton-visualization-glow"
          />
          <span
            class="lucid-RadioButton-visualization-container"
          />
          <span
            class="lucid-RadioButton-visualization-dot"
          />
        </span>
        <div
          class="lucid-RadioButtonLabeled-label"
        >
          Tall Simon
        </div>
      </label>
      <label
        class="lucid-RadioButtonLabeled"
      >
        <span
          class="lucid-RadioButton"
        >
          <input
            class="lucid-RadioButton-native"
            type="radio"
          />
          <span
            class="lucid-RadioButton-visualization-glow"
          />
          <span
            class="lucid-RadioButton-visualization-container"
          />
          <span
            class="lucid-RadioButton-visualization-dot"
          />
        </span>
        <div
          class="lucid-RadioButtonLabeled-label"
        >
          Short Simon
        </div>
      </label>
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:15px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Theodore
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SingleSelect"
        style="display:block;margin-top:13px"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
            tabindex="0"
          >
            <div
              class="lucid-SingleSelect-Control lucid-SingleSelect-Control-is-null-option"
              tabindex="0"
            >
              <span
                class="lucid-SingleSelect-Control-content"
              >
                Select
              </span>
              <svg
                class="lucid-Icon lucid-Icon-color-primary lucid-ChevronIcon lucid-ChevronIcon-is-down"
                height="12"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="12"
              >
                <path
                  d="M.5 4.5l7.5 7 7.5-7"
                />
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </label>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for SelectedIndexAsProp 1`] = `
<section>
  <span
    class="lucid-RadioGroup"
    style="display:inline-flex;flex-direction:column"
  >
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Captain America
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Iron Man
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Thor
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton lucid-RadioButton-is-selected"
      >
        <input
          checked=""
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Hulk
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Black Widow
      </div>
    </label>
    <label
      class="lucid-RadioButtonLabeled"
      style="margin-right:13px"
    >
      <span
        class="lucid-RadioButton"
      >
        <input
          class="lucid-RadioButton-native"
          type="radio"
        />
        <span
          class="lucid-RadioButton-visualization-glow"
        />
        <span
          class="lucid-RadioButton-visualization-container"
        />
        <span
          class="lucid-RadioButton-visualization-dot"
        />
      </span>
      <div
        class="lucid-RadioButtonLabeled-label"
      >
        Hawkeye
      </div>
    </label>
  </span>
</section>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for SelectedIndexFromChild 1`] = `
<span
  class="lucid-RadioGroup"
  style="display:inline-flex;flex-direction:column"
>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Leonardo
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Raphael
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Donatello
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Michelangelo
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Venus
    </div>
  </label>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for Stateful 1`] = `
<span
  class="lucid-RadioGroup"
>
  <label
    class="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton lucid-RadioButton-is-selected"
    >
      <input
        checked=""
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Alvin
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Simon
    </div>
  </label>
  <label
    class="lucid-RadioButtonLabeled"
    style="margin-right:13px"
  >
    <span
      class="lucid-RadioButton"
    >
      <input
        class="lucid-RadioButton-native"
        type="radio"
      />
      <span
        class="lucid-RadioButton-visualization-glow"
      />
      <span
        class="lucid-RadioButton-visualization-container"
      />
      <span
        class="lucid-RadioButton-visualization-dot"
      />
    </span>
    <div
      class="lucid-RadioButtonLabeled-label"
    >
      Theodore
    </div>
  </label>
</span>
`;
